# py-semver-checks

./: Makefile  README.md  pyproject.toml
tests/: conftest.py  test_func_def_check.py
tests/fixtures/: simple_code.py.fixture
verger/: ast2dict.py  base_test_generator.py  checker.py  checker_function_def.py  function_def.py
