[tool.poetry]
name = "verger"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
ast2json = "^0.3"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"
ruff = "^0.2.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]

[tool.mypy]
files = ["spynner", "tests"]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "tests/*",
]